--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 	<h5 id="title_3"> I'm a UI/UX Designer studying at UCSD. </h5>
   </div>
 <div class="contrainer">
-  <img id="kyle_i" src="images/classy_pic.jpg" class="rounded mx-auto d-block" height=" 415" width="420" >
+  <img id="kyle_i" src="Images/classy_pic.jpg" class="rounded mx-auto d-block" height=" 415" width="420" >
 </div>
 <div class="container">
   <div class="row">
@@ -209,7 +209,7 @@
 		<h4 class="headers_2 spacing">Email:</h4>
           <a id="para_4" href="mailto:k6sung@ucsd.edu">k6sung@ucsd.edu</a>
         <h4 class="headers_2 spacing">Follow me on:</h4>
-          <input id="logo_2" type="image" src="images/linkedin_logo.png" onclick="logo_links()"/>
+          <input id="logo_2" type="image" src="Images/linkedin_logo.png" onclick="logo_links()"/>
         <h4 class="headers_2 spacing">Resume:</h4>
 		<a href="Kyle_Sung_Resume.pdf" download="Kyle_Sung_Resume.pdf">
 			<button Id="btn_4" class = "buttons" >download</button>
