--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 	<h5 id="title_3"> I'm a UI/UX Designer studying at UCSD. </h5>
   </div>
 <div class="contrainer">
-  <img id="kyle_i" src="Images/classy_pic.jpg" class="rounded mx-auto d-block" height=" 415" width="420" >
+  <img id="kyle_i" src="Images/Classy_pic.jpg" class="rounded mx-auto d-block" height=" 415" width="420" >
 </div>
 <div class="container">
   <div class="row">
